--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <li class="events__sampleEvent__li">
                         <img src="images/image-9.jpeg" alt="">
                     </li>
-                    <li class="events__sampleEvent__li">
+                    <li class="events__sampleEvent__li events__sampleEvent__text">
                         <img src="images/image-10.jpeg" alt="">
                         <div class="events__sampleEvent__li__content">
                             <div class="container">
@@ -193,7 +193,7 @@
             </div>
         </section>
         <secion class="blog">
-            <div class="wrapper">
+            <div class="wrapper blog__wrapper">
                 <h3 class="blog__h3 h3--black">Our Blog</h3>
                 <div class="blogPosts">
                     <ul class="blogPosts__ul">
@@ -220,7 +220,7 @@
     <!-- MAIN SECTION ENDS -->
     <!-- FOOTER SECTION BEGINS -->
     <footer class="footer">
-        <div class="wrapper">
+        <div class="wrapper footer__wrapper">
             <ul class="footerSections">
                 <li class="footerSections__third">
                     <h4 class="footer__h4">Contact</h4>
