--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- HEADER SECTION BEGINS-->
     <header class="header">
-        <!-- NAV SECTION BEGINS -->
+        <!-- NAVB SECTION BEGINS -->
         <nav class="headerNav">
             <div class="wrapper headerNav__wrapper">
                 <h1 class="h1 headerNav__h1">Restaurant</h1>
@@ -49,19 +49,19 @@
                     <div class="about__half about__gallery">
                         <ul class="about__gallery__ul">
                             <li class="about__gallery__li">
-                                <img src="images/image-2.jpeg" alt="">
+                                <img src="images/image-2.jpeg" alt="plate of eggs, tomatoes, cucumbers and other greens">
                                 <h4 class="h4 about__h4">Local</h4>
                             </li>
                             <li class="about__gallery__li">
-                                <img src="images/image-3.jpeg" alt="">
+                                <img src="images/image-3.jpeg" alt="bowl of flour and brown sugar">
                                 <h4 class="h4 about__h4">Modern</h4>
                             </li>
                             <li class="about__gallery__li">
-                                <img src="images/image-4.jpeg" alt="">
+                                <img src="images/image-4.jpeg" alt="girl in a yellow toque smiling">
                                 <h4 class="h4 about__h4">Friendly</h4>
                             </li>
                             <li class="about__gallery__li">
-                                <img src="images/image-5.jpeg" alt="">
+                                <img src="images/image-5.jpeg" alt="plate of pancakes with syrup and berries">
                                 <h4 class="h4 about__h4">Delicious</h4>
                             </li>
                         </ul>
@@ -102,10 +102,10 @@
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                         </li>
                         <li class="services__gallery__li">
-                            <img src="images/image-6.jpeg" alt="">
+                            <img src="images/image-6.jpeg" alt="modern bar with a waiter walking by in motion">
                         </li>
                         <li class="services__gallery__li">
-                            <img src="images/image-7.jpeg" alt="">
+                            <img src="images/image-7.jpeg" alt="plate with salmon, cucumbers, tomatoes and sauce">
                         </li>
                         <li class="services__gallery__li">
                             <h4 class="h4 services__gallery__h4">Event Booking</h4>
@@ -125,7 +125,7 @@
                     <a href="#">
                         <i class="reviews__icon fas fa-angle-left"></i>
                     </a>
-                    <img src="images/image-8.jpeg" alt="">
+                    <img src="images/image-8.jpeg" alt="picture of reviewer">
                     <a href="#">
                         <i class="reviews__icon fas fa-angle-right"></i>
                     </a>
@@ -142,10 +142,10 @@
             <div class="events__sampleEvent"> 
                 <ul class="events__sampleEvent__ul">
                     <li class="events__sampleEvent__li">
-                        <img src="images/image-9.jpeg" alt="">
+                        <img src="images/image-9.jpeg" alt="plate with burger, coleslaw and chips">
                     </li>
                     <li class="events__sampleEvent__li events__sampleEvent__text">
-                        <img src="images/image-10.jpeg" alt="">
+                        <img src="images/image-10.jpeg" alt="bowl with granola, berries beside a glass of milk">
                         <div class="events__sampleEvent__li__content">
                             <div class="container">
                                 <h3 class="h3 events__h3--white">Sample Event</h3>
@@ -154,7 +154,7 @@
                         </div>
                     </li>
                     <li class="events__sampleEvent__li">
-                        <img src="images/image-11.jpeg" alt="">
+                        <img src="images/image-11.jpeg" alt="kitchen with chefs at work">
                     </li>
                 </ul>
             </div>
@@ -202,17 +202,17 @@
                 <div class="blogPosts">
                     <ul class="blogPosts__ul">
                         <li class="blogPosts__li">
-                            <img src="images/image-12.jpeg" alt="">
+                            <img src="images/image-12.jpeg" alt="plate with steak and veggies">
                             <h6 class="h6">Popular Steak Cuts</h6>
                             <a class="blogPosts__a" href="#">Read More <span class="blogPosts__chevron">&raquo</span></a>
                         </li>
                         <li class="blogPosts__li">
-                            <img src="images/image-13.jpeg" alt="">
+                            <img src="images/image-13.jpeg" alt="table set with flowers">
                             <h6 class="h6">Reservations are Booming!</h6>
                             <a class="blogPosts__a" href="#">Read More <span class="blogPosts__chevron">&raquo</span></a>
                         </li>
                         <li class="blogPosts__li">
-                            <img src="images/image-14.jpeg" alt="">
+                            <img src="images/image-14.jpeg" alt="clinking wine glasses">
                             <h6 class="h6">Wine Tasting Events</h6>
                             <a class="blogPosts__a" href="#">Read More <span class="blogPosts__chevron">&raquo</span></a>
                         </li>
@@ -228,7 +228,7 @@
             <ul class="footerSections">
                 <li class="footerSections__third">
                     <h4 class="h4 footer__h4">Contact</h4>
-                    <p class="footer__contact">
+                    <p class="p footer__contact">
                         <i class="far fa-envelope"></i>
                         info@hackeryou.com
                     </p>
@@ -255,28 +255,28 @@
                     <h4 class="h4 footer__h4">Instagram</h4>
                     <ul class="footerSections__gallery">
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-15.jpeg" alt="">
+                            <img src="images/image-15.jpeg" alt="plate of pasta and greens">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-16.jpeg" alt="">
+                            <img src="images/image-16.jpeg" alt="empty plate beside cutlery">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-17.jpeg" alt="">
+                            <img src="images/image-17.jpeg" alt="table full of various food">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-18.jpeg" alt="">
+                            <img src="images/image-18.jpeg" alt="plates of mashed potatoes">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-19.jpeg" alt="">
+                            <img src="images/image-19.jpeg" alt="plate of pasta with mushrooms">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-20.jpeg" alt="">
+                            <img src="images/image-20.jpeg" alt="pizza with herbed tomatoes">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-21.jpeg" alt="">
+                            <img src="images/image-21.jpeg" alt="plate with burger and sweet potato fries">
                         </li>
                         <li class="footerSections__galleryItem">
-                            <img src="images/image-22.jpeg" alt="">
+                            <img src="images/image-22.jpeg" alt="plate of meat and veggies">
                         </li>
                     </ul>
                 </li>
