--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- HEADER SECTION BEGINS-->
     <header class="header">
-        <!-- NAVB SECTION BEGINS -->
+        <!-- NAV SECTION BEGINS -->
         <nav class="headerNav">
             <div class="wrapper headerNav__wrapper">
                 <h1 class="h1 headerNav__h1">Restaurant</h1>
@@ -102,7 +102,7 @@
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
                         </li>
                         <li class="services__gallery__li">
-                            <img src="images/image-6.jpeg" alt="modern bar with a waiter walking by in motion">
+                            <img src="images/image-6.jpeg" class="hvr-underline-reveal" t="modern bar with a waiter walking by in motion">
                         </li>
                         <li class="services__gallery__li">
                             <img src="images/image-7.jpeg" alt="plate with salmon, cucumbers, tomatoes and sauce">
@@ -143,6 +143,12 @@
                 <ul class="events__sampleEvent__ul">
                     <li class="events__sampleEvent__li">
                         <img src="images/image-9.jpeg" alt="plate with burger, coleslaw and chips">
+                        <div class="events__sampleEvent__li__content">
+                            <div class="container">
+                                <h3 class="h3 events__h3--white">Sample Event</h3>
+                            </div>
+                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                        </div>
                     </li>
                     <li class="events__sampleEvent__li events__sampleEvent__text">
                         <img src="images/image-10.jpeg" alt="bowl with granola, berries beside a glass of milk">
@@ -155,6 +161,12 @@
                     </li>
                     <li class="events__sampleEvent__li">
                         <img src="images/image-11.jpeg" alt="kitchen with chefs at work">
+                        <div class="events__sampleEvent__li__content">
+                            <div class="container">
+                                <h3 class="h3 events__h3--white">Sample Event</h3>
+                            </div>
+                            <p class="p events__p--white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
